Thu Nov 01 10:54:13 UTC 2011  Martin Corino  <mcorino@remedy.nl>

        Merged changes from Remedy SA work branch.

        === start changelog ===

        Tue Nov 01 08:41:15 UTC 2011  Marijke Hengstmengel  <mhengstmengel@remedy.nl>
                * tests/Collocation/Sender/Sender_exec.cpp:
                Add define in test in case of CIAO not build with
                ccm_direct_colloation.

        Mon Oct 31 13:55:15 UTC 2011  Marijke Hengstmengel  <mhengstmengel@remedy.nl>
                * ciao/Containers/Container_Base.idl:
                * ciao/Containers/Container_Base_T.h:
                * ciao/Containers/Container_Base_T.cpp:
                * ciao/Servants/Extension/Extension_Container.h:
                * ciao/Servants/Connector_Servant_Impl_Base.cpp:
                * ciao/Servants/Servant_Impl_Base.cpp:
                * ciao/Servants/Servants.mpc:
                Removed already disabled lines with servant- and portactivators

                * ciao/Containers/CIAO_Servant_Activator.idl:
                * ciao/Containers/CIAO_Servant_Activator.mpc:
                * ciao/Containers/Servant_Activator.h:
                * ciao/Containers/Servant_Activator.cpp:
                * ciao/Servants/Port_Activator_T.cpp:
                * ciao/Servants/Port_Activator_T.h:
                * ciao/Servants/CIAO_Port_Activator.idl:
                * ciao/Servants/Port_Activator.h:
                * ciao/Servants/Port_Activator.cpp:
                * MPC/config/ciao_port_activator_stub.mpb:
                * MPC/config/ciao_servant_activator_stub.mpb:
                * MPC/config/ciao_servant_activator.mpb:

                Deleted this files.



        Mon Oct 31 13:30:15 UTC 2011  Marijke Hengstmengel  <mhengstmengel@remedy.nl>
                * tests/Collocation/README:
                Explanation of the test

        Mon Oct 31 13:19:15 UTC 2011  Marijke Hengstmengel  <mhengstmengel@remedy.nl>
                * tests/Collocation/Coll_Base/Base.idl: